@@ -53,22 +53,45 @@ begin_import
 import|import
 name|com
 operator|.
-name|googlecode
+name|github
 operator|.
-name|concurrentlinkedhashmap
+name|benmanes
 operator|.
-name|ConcurrentLinkedHashMap
+name|caffeine
+operator|.
+name|cache
+operator|.
+name|Cache
 import|;
 end_import
 begin_import
 import|import
 name|com
 operator|.
-name|googlecode
+name|github
 operator|.
-name|concurrentlinkedhashmap
+name|benmanes
 operator|.
-name|EvictionListener
+name|caffeine
+operator|.
+name|cache
+operator|.
+name|Caffeine
+import|;
+end_import
+begin_import
+import|import
+name|com
+operator|.
+name|github
+operator|.
+name|benmanes
+operator|.
+name|caffeine
+operator|.
+name|cache
+operator|.
+name|RemovalListener
 import|;
 end_import
 begin_comment
@@ -101,7 +124,7 @@ decl_stmt|;
 DECL|field|cache
 specifier|private
 specifier|final
-name|ConcurrentMap
+name|Cache
 argument_list|<
 name|BlockCacheKey
 argument_list|,
@@ -362,7 +385,7 @@ name|AtomicInteger
 argument_list|()
 expr_stmt|;
 block|}
-name|EvictionListener
+name|RemovalListener
 argument_list|<
 name|BlockCacheKey
 argument_list|,
@@ -370,57 +393,31 @@ name|BlockCacheLocation
 argument_list|>
 name|listener
 init|=
-operator|new
-name|EvictionListener
-argument_list|<
-name|BlockCacheKey
-argument_list|,
-name|BlockCacheLocation
-argument_list|>
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|onEviction
-parameter_list|(
-name|BlockCacheKey
-name|key
-parameter_list|,
-name|BlockCacheLocation
-name|location
-parameter_list|)
-block|{
+name|notification
+lambda|->
 name|releaseLocation
 argument_list|(
-name|location
+name|notification
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
-expr_stmt|;
-block|}
-block|}
 decl_stmt|;
 name|cache
 operator|=
-operator|new
-name|ConcurrentLinkedHashMap
+name|Caffeine
 operator|.
-name|Builder
-argument_list|<
-name|BlockCacheKey
-argument_list|,
-name|BlockCacheLocation
-argument_list|>
+name|newBuilder
 argument_list|()
 operator|.
-name|maximumWeightedCapacity
+name|removalListener
 argument_list|(
-name|maxEntries
+name|listener
 argument_list|)
 operator|.
-name|listener
+name|maximumSize
 argument_list|(
-name|listener
+name|maxEntries
 argument_list|)
 operator|.
 name|build
@@ -442,14 +439,11 @@ name|BlockCacheKey
 name|key
 parameter_list|)
 block|{
-name|releaseLocation
-argument_list|(
 name|cache
 operator|.
-name|remove
+name|invalidate
 argument_list|(
 name|key
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -583,7 +577,7 @@ name|location
 init|=
 name|cache
 operator|.
-name|get
+name|getIfPresent
 argument_list|(
 name|blockCacheKey
 argument_list|)
@@ -687,8 +681,6 @@ condition|(
 name|newLocation
 condition|)
 block|{
-name|releaseLocation
-argument_list|(
 name|cache
 operator|.
 name|put
@@ -699,7 +691,6 @@ name|clone
 argument_list|()
 argument_list|,
 name|location
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|metrics
@@ -741,7 +732,7 @@ name|location
 init|=
 name|cache
 operator|.
-name|get
+name|getIfPresent
 argument_list|(
 name|blockCacheKey
 argument_list|)
@@ -1092,6 +1083,9 @@ parameter_list|()
 block|{
 return|return
 name|cache
+operator|.
+name|asMap
+argument_list|()
 operator|.
 name|size
 argument_list|()
